Modify index.html add meta tag

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@
   --c-soft-blue: hsl(215, 51%, 70%);
   --c-cyan: hsl(178, 100%, 50%);
   --c-very-dark-blue-main: hsl(217, 54%, 11%);
-  --c-very-dark-blue-card: hsl(216, 50%, 16%);
+  --c-very-dark-blue-card: #14253d;
   --c-very-dark-blue-line: hsl(215, 32%, 27%);
   --c-white: hsl(0, 0%, 100%);
 }
